# Logging-system

./: CMakeLists.txt  README.md
doc/: SDD.md  SRS.md  UserManual.md  analyse.md
include/: LoggingLibrary.h  LoggingLibrary.hpp
src/ClientApp/: CMakeLists.txt  ClientApp.cpp
src/LoggingLibrary/: CMakeLists.txt  LoggingLibrary.cpp
src/LoggingServer/: CMakeLists.txt  LoggingServer.cpp
